<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="limpar">Limpar</string>
    <string name="logar">Login</string>
    <string name="menuPrincipal">Principal</string>
    <string name="title_activity_principal">Principal</string>
    <string name="bemVindo">"Bem Vindo "</string>

    <string-array name="menu_principal_item">
        <item>Pedidos</item>
        <item>Vendas</item>
    </string-array>

    <string name="title_activity_lista_empresas">ListaEmpresas</string>

    <string name="lista_empresa_busca">Busca por nome</string>

    <string name="autocompletetextview">AutoCompleteTextView</string>

    <string name="lista_empresa_hint">Digite aqui o nome da Empresa</string>

</resources>
